etcd-statefulset.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd
  namespace: etcd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      containers:
        - name: etcd
          image: quay.io/coreos/etcd:v3.5.13
          ports:
            - containerPort: 2379
            - containerPort: 2380
          volumeMounts:
            - mountPath: /etcd-data
              name: etcd-data
      volumes:
        - name: etcd-data
          persistentVolumeClaim:
            claimName: etcd-pvc
