kafka-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-statefulset
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  serviceName: "kafka"
  template:
    metadata:
      labels:
        app: kafka
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
        kubernetes.io/hostname: "k8s-home"
      containers:
        - name: kafka
          image: bitnami/kafka:3.5.1
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 9092 # PLAINTEXT
            - containerPort: 9093 # CONTROLLER
            - containerPort: 9094 # EXTERNAL
          volumeMounts:
            - name: kafka-data
              mountPath: /bitnami/kafka

      volumes:
        - name: kafka-data
          persistentVolumeClaim:
            claimName: kafka-pvc
