openim-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openim-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: openim-api
  template:
    metadata:
      labels:
        app: openim-api
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      containers:
        - name: openim-api-container
          image: openim/openim-api:v3.8.3-alpha.3-test1
          volumeMounts:
            - name: openim-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10002
            - containerPort: 12002
      volumes:
        - name: openim-config
          configMap:
            name: openim-config
