openim-msggateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messagegateway-rpc-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messagegateway-rpc-server
  template:
    metadata:
      labels:
        app: messagegateway-rpc-server
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      containers:
        - name: openim-msggateway-container
          image: openim/openim-msggateway:v3.8.3-alpha.3-test1
          volumeMounts:
            - name: openim-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10140
            - containerPort: 12001
      volumes:
        - name: openim-config
          configMap:
            name: openim-config
