openim-rpc-conversation-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conversation-rpc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conversation-rpc-server
  template:
    metadata:
      labels:
        app: conversation-rpc-server
    spec:
      containers:
        - name: conversation-rpc-server-container
          image: openim/openim-rpc-conversation:v3.8.3-alpha.3-test1
          volumeMounts:
            - name: openim-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10220
            - containerPort: 12220
      volumes:
        - name: openim-config
          configMap:
            name: openim-config
