openim-rpc-friend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friend-rpc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: friend-rpc-server
  template:
    metadata:
      labels:
        app: friend-rpc-server
    spec:
      containers:
        - name: friend-rpc-server-container
          image: openim/openim-rpc-friend:v3.8.3-alpha.3-test1
          volumeMounts:
            - name: openim-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10240
            - containerPort: 12240
      volumes:
        - name: openim-config
          configMap:
            name: openim-config
