openim-rpc-msg-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msg-rpc-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: msg-rpc-server
  template:
    metadata:
      labels:
        app: msg-rpc-server
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      containers:
        - name: msg-rpc-server-container
          image: openim/openim-rpc-msg:v3.8.3-alpha.3-test1
          volumeMounts:
            - name: openim-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10280
            - containerPort: 12280
      volumes:
        - name: openim-config
          configMap:
            name: openim-config
