openim-rpc-third-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: third-rpc-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: third-rpc-server
  template:
    metadata:
      labels:
        app: third-rpc-server
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      containers:
        - name: third-rpc-server-container
          image: openim/openim-rpc-third:v3.8.3-alpha.3-test1
          volumeMounts:
            - name: openim-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10300
            - containerPort: 12300
      volumes:
        - name: openim-config
          configMap:
            name: openim-config
