redis-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-statefulset
spec:
  serviceName: "redis"
  replicas: 2
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      containers:
        - name: redis
          image: redis:7.0.0
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
          command:
            [
              "/bin/sh",
              "-c",
              'redis-server  --requirepass "$REDIS_PASSWORD" --appendonly yes',
            ]
      volumes:
        - name: redis-config-volume
          configMap:
            name: openim-config
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc
