alertmanager-service.yml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  labels:
    app: alertmanager
spec:
  type: ClusterIP
  selector:
    app: alertmanager
  ports:
    - name: alertmanager-port
      protocol: TCP
      port: 9093
      targetPort: 9093
