etcd-service.yml
apiVersion: v1
kind: Service
metadata:
  name: etcd-service
spec:
  ports:
    - name: client
      port: 2379
      targetPort: 2379
    - name: peer
      port: 2380
      targetPort: 2380
  selector:
    app: etcd
  type: ClusterIP
