grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - name: grafana-port
      protocol: TCP
      port: 3000
      targetPort: 3000
