openim-msggateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: messagegateway-rpc-service
spec:
  selector:
    app: messagegateway-rpc-server
  ports:
    - name: longconnserver-10001
      protocol: TCP
      port: 10001
      targetPort: 10001
    - name: grpc-10140
      protocol: TCP
      port: 10140
      targetPort: 10140
    - name: prometheus-12001
      protocol: TCP
      port: 12001
      targetPort: 12001
  type: ClusterIP
