prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - name: prometheus-port
      protocol: TCP
      port: 9090
      targetPort: 9090
