ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openim-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "im.asany.cn"
    external-dns.alpha.kubernetes.io/target: 43.143.122.217
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: im.asany.cn
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: openim-api-service
            port:
              number: 10002
      - path: /msggateway(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: messagegateway-rpc-service
            port:
              number: 10001
  tls:
  - hosts:
    - im.asany.cn
    secretName: im-asany-tls
